# django-neuralyzer

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.devel.txt  tbump.toml
.github/workflows/: build_n_publish.yml
django_anonymizable/: base.py
django_anonymizable/management/commands/: ensure_fields_are_anonymizable.py  ensure_fields_are_handled.py
django_neuralyzer/: base.py  utils.py
django_neuralyzer/management/commands/: ensure_fields_are_handled.py  export_neuralyzed_fields.py
tests/: models.py  test_base.py
