[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-neuralyzer"
version = "0.0.0"
description = "Anonymize specific django model for specific instance"
authors = [
    {name = "WebU dev team", email = "contact@webu.coop"},
]
readme = "README.md"
dependencies = [
    "django>=4.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/webu/django-neuralyzer"
Issues = "https://github.com/webu/django-neuralyzer/issues"

[tool.djlint]
    profile = "django"
    preserve_blank_lines = true
    format_js = false
    format_css = true

[tool.ruff]
    include = ["pyproject.toml", "django_neuralyzer/**/*.py"]
    line-length = 99
    extend-exclude = [
        "__pycache__",
        "migrations"
    ]

[tool.ruff.lint]
    select = [
        "F401", # unused imports
        "I",
    ] # https://docs.astral.sh/ruff/rules

[tool.ruff.lint.isort]
    length-sort = false
    force-single-line = true
    force-sort-within-sections = true
    known-first-party = ["webusi"]
    known-third-party = ["parler", "wagtail", "oscar", "oscarapi", "diva", "diva_oscar", "diva_wagtail"]
    section-order = ["future", "standard-library", "pylib", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"django" = ["django"]
"pylib" = ["dateutil"]
